--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -4,4 +4,7 @@
 @import "base/_global";
 @import "base/_mixins";
 @import "modules/_grid";
+@import "modules/_cycle-slide";
+@import "modules/_header-top";
+@import "modules/_main-menu";
 @import "modules/_btn";
