--- a/app/partial/_header.html
+++ b/app/partial/_header.html
@@ -1,4 +1,123 @@
 <!--Header Area Start-->
 <header>
-  	header
+  <div class="header-top">
+    <div class="container">
+      <div class="row">
+        <div class="col col-md-4">
+          <div class="header-top__currency-language">
+            <div class="header-top__currency-menu">
+              <ul>
+                <li><a href="#">USD <i class="fa fa-angle-down"></i></a>
+                  <ul class="header-top__currency-dropdown">
+                    <li> <a href="#">EUR</a></li>
+                    <li><a href="#">USD</a></li>
+                  </ul>
+                </li>
+              </ul>
+            </div>
+            <div class="header-top__language-menu">
+              <ul>
+                <li><a href="#">English <i class="fa fa-angle-down"></i></a>
+                  <ul class="header-top__language-dropdown">
+                    <li><a href="#">French</a></li>
+                    <li><a href="#">English</a></li>
+                    <li><a href="#">German</a></li>
+                    <li><a href="#">Arabic</a></li>
+                  </ul>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div class="col col-md-8">
+          <div class="header-top__right">
+            <div class="header-top__login">
+              <a href="#"><i class="fa fa-pencil-square-o"></i>Register</a>
+            </div>
+            <div class="header-top__account">
+              <a href="#"><i class="fa fa-lock"></i>sign In</a>
+            </div>
+            <ul class="header-top__cart">
+                <li><a href="#" class="header-top__cart-item"><i class="fa fa-shopping-cart"></i>(2)</a>
+                    <div class="header-top__cart-mini-content">
+                        <div class="header-top__cart-products-list">
+                            <div class="header-top__cart-products">
+                                <div class="header-top__cart-image">
+                                    <a href="#"><img class="header-top__cart-img" alt="" src="assets/images/1.jpg"></a>
+                                </div>
+                                <div class="header-top__cart-product-info">
+                                    <a class="header-top__cart-product-name" href="#">alteration</a>
+                                    <span class="header-top__cart-quantity">X 1 -</span>
+                                    <span class="header-top__cart-p-price">$23.87</span>
+                                    <a class="header-top__cart-remove-product"><i class="fa fa-times-circle"></i></a>
+                                </div>
+                            </div>
+                            <div class="header-top__cart-products">
+                                <div class="header-top__cart-image">
+                                    <a href="#"><img class="header-top__cart-img" alt="" src="assets/images/2.jpg"></a>
+                                </div>
+                                <div class="header-top__cart-product-info">
+                                    <a class="header-top__cart-product-name" href="#">alteration</a>
+                                    <span class="header-top__cart-quantity">X 1 -</span>
+                                    <span class="header-top__cart-p-price">$332.28</span>
+                                    <a class="header-top__cart-remove-product"><i class="fa fa-times-circle"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="header-top__cart-price-list">
+                            <p class="header-top__cart-price-amount">Sub-Total : <span>$293.73</span> </p>
+                            <p class="header-top__cart-price-amount">Total : <span>$356.15</span> </p>
+                            <div class="header-top__cart-buttons-group">
+                                <a class="header-top__cart-buttons" href="#"><i class="fa fa-shopping-cart header-top__button-icons"></i> View Cart</a>
+                                <a class="header-top__cart-buttons" href="#"><i class="fa fa-sign-in header-top__button-icons"></i> Checkout</a>
+                            </div>
+                        </div>
+                    </div>
+                </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="header-top__logo-menu">
+    <div class="container">
+      <div class="header-top__logo-menu-bg">
+        <div class="row">
+          <div class="col col-md-4">
+            <div class="header-top__logo">
+              <a href="index.html"><img class="header-top__logo-image" src="assets/images/logo.png" alt="ADVENTURES"></a>
+            </div>
+          </div>
+          <div class="col col-md-8">
+            <div class="header-top__main-menu">
+              <nav>
+                <ul id="nav" class="header-top__menu">
+                  <li><a href="#">Home</a></li>
+                  <li><a href="#">Destination</a></li>
+                  <li class="header-top__dropdown"><a href="#">Travel</a>
+                    <ul class="header-top__submenu">
+                      <li><a href="#">Travel 1</a></li>
+                      <li><a href="#">Travel 2</a></li>
+                      <li><a href="#">Travel 3</a></li>
+                      <li><a href="#">Travel 4</a></li>
+                    </ul>
+                  </li>
+                  <li><a href="#">Pages</a></li>
+                  <li class="header-top__dropdown"><a href="#">Blog</a>
+                    <ul class="header-top__submenu">
+                      <li><a href="#">Blog pages 1</a></li>
+                      <li><a href="#">Blog pages 2</a></li>
+                      <li><a href="#">Blog pages 3</a></li>
+                    </ul>
+                  </li>
+                  <li><a href="#">Contact Us</a></li>
+                </ul>
+              </nav>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </header>
