--- a/app/assets/styles/modules/_grid.css
+++ b/app/assets/styles/modules/_grid.css
@@ -50,6 +50,10 @@
 .col-xs-2 {width: 16.662%;}
 .col-xs-1 {width: 8.332%;}
 
+@media (max-width: 767px) {
+  .hidden-xs {display: none !important;}
+}
+
 @media screen and (min-width: 768px) {
 
   .col-sm-11 {width: 91.662%;}
@@ -97,7 +101,6 @@
   .col-lg-2 {width: 16.662%;}
   .col-lg-1 {width: 8.332%;}
 }
-
 
 .clearfix:before,
 .clearfix:after,
